<resources>
    <string name="app_name">JobAssist</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_us">About Us</string>
    <string name="follow_twitter">Follow us on Twitter</string>
    <string name="mohit_twitter">
    <a href="https://www.twitter.com/mohit__patil">Mohit Patil</a>
    </string>

    <string name="pranay_twitter">
    <a href="https://www.twitter.com/PPathole">Pranay Pathole</a>
    </string>

    <string name="raut_twitter">
    <a href="https://www.twitter.com/theashutoshraut">Ashutosh Raut</a>
    </string>

    <string name="hrishi_twitter">
    <a href="https://www.twitter.com/patilhrishi18">Hrishikesh Patil</a>
    </string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>

</resources>
