<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="30dp"
        android:layout_height="33dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/textView4"
        android:layout_marginEnd="63dp"
        app:srcCompat="@drawable/twitter"
        android:contentDescription="@string/todo5" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/about_us"
        android:textColor="@android:color/background_light"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="128dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/follow_twitter"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/mohit_twitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="241dp"
        android:text="@string/mohit_twitter"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/pranay_twitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/hrishi_twitter"
        android:layout_alignTop="@+id/mohit_twitter"
        android:text="@string/pranay_twitter"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/raut_twitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/mohit_twitter"
        android:layout_marginBottom="207dp"
        android:text="@string/raut_twitter"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/hrishi_twitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/raut_twitter"
        android:layout_marginEnd="31dp"
        android:text="@string/hrishi_twitter"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="30dp"
        android:layout_height="33dp"
        android:layout_alignBottom="@+id/mohit_twitter"
        android:layout_toStartOf="@+id/pranay_twitter"
        app:srcCompat="@drawable/twitter"
        android:contentDescription="@string/todo4" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="30dp"
        android:layout_height="33dp"
        android:layout_alignBottom="@+id/mohit_twitter"
        android:layout_marginEnd="-50dp"
        android:layout_toStartOf="@+id/mohit_twitter"
        app:srcCompat="@drawable/twitter"
        android:contentDescription="@string/todo3" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="30dp"
        android:layout_height="33dp"
        android:layout_alignBottom="@+id/raut_twitter"
        android:layout_marginEnd="-50dp"
        android:layout_toStartOf="@+id/mohit_twitter"
        app:srcCompat="@drawable/twitter"
        android:contentDescription="@string/todo2" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="30dp"
        android:layout_height="33dp"
        android:layout_alignTop="@+id/raut_twitter"
        android:layout_toStartOf="@+id/pranay_twitter"
        app:srcCompat="@drawable/twitter"
        android:contentDescription="@string/todo1" />

</RelativeLayout>